--- a/vitess-slackbot/vercel.json
+++ b/vitess-slackbot/vercel.json
@@ -2,7 +2,7 @@
   "redirects": [
     {
       "source": "/",
-      "destination": "https://github.com/nicoalbanese/ai-sdk-slackbot"
+      "destination": "https://vitess.doc0.tech"
     }
   ],
   "functions": {
